--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "dev": "gulp dev",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   },
   "repository": {
     "type": "git",
@@ -17,12 +18,27 @@
     "url": "https://github.com/mkp0131/gulp-1/issues"
   },
   "homepage": "https://github.com/mkp0131/gulp-1#readme",
+  "browserslist": [
+    "last 2 versions"
+  ],
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
+    "babelify": "^10.0.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-pug": "^5.0.0"
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-bro": "^2.0.0",
+    "gulp-csso": "^4.0.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-image": "^6.2.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-webserver": "^0.9.1",
+    "sass": "^1.49.9"
+  },
+  "dependencies": {
+    "uglifyify": "^5.0.2"
   }
 }
